fix z-index mess

--- a/src/components/Content/Slideshow/Slide/Slide.css
+++ b/src/components/Content/Slideshow/Slide/Slide.css
@@ -1,28 +1,23 @@
 .slide {
     height: 100%;
     box-sizing: border-box;
-    padding-left: 80px;
+    padding-left: 160px;
     padding-top: 120px;
-    z-index: -10;
 }
 
 .slide__content {
-    z-index: 0;
+    position: relative;
 }
 
 .slide__background {
-    z-index: -5;
     position: absolute;
     top: 0;
-    bottom: 0;
-    left: 80px;
-    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .slide__image {
-    position: absolute;
-    top: 0;
-    right: 0;
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
